Adds BDD UDT